Thu May  8 10:51:29 UTC 2008  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_g++.GNU: Ensure -pipe is not
          inserted into CCFLAGS twice. Similar to earlier change from
          Wed Jan 23 17:23:31 UTC 2008  Steve Huston  <shuston@riverace.com>
          Fixes Bugzilla #3232.

Thu May  8 08:06:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ETCL/ETCL_l.cpp:
        * ace/ETCL/ETCL_y.cpp:
          Fixed casing of include

Wed May  7 19:28:35 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Unbounded_Set.{h inl}: Replaced typedef BASE with base_type.
          Avoids a BASE macro on AIX.

Wed May  7 19:02:51 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/ETCL/ETCL_include:

          Removed this directory.

        * ace/ETCL/etcl_parser_export.h:

          Relocated here from ace/ETCL/ETCL_include.

        * bin/MakeProjectCreator/config/etcl_parser.mpb:

          Renamed this file from ace_etcl_parser.mpb.

        * ace/ETCL/ETCL_l.cpp:
        * ace/ETCL/ETCL.yy
        * ace/ETCL/ETCL_Interpreter.cpp:
        * ace/ETCL/ETCL.ll:
        * ace/ETCL/ETCL_y.cpp:
        * ace/ETCL/ETCL_Interpreter.h:
        * ace/ETCL/ETCL.mpc:
        * ace/MonitorControl/MonitorControl.mpc:
        * bin/MakeProjectCreator/config/ace_mc.mpb:

          All changes in this checkin are to remove
          unnecessary things as a result of making the
          ETCL parser the only one used. The corresponding
          parser in TAO is eliminated.

Wed May  7 17:11:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added ICC 11.0

Wed May  7 14:28:54 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/ChangeLogEditor/FileLocatorFactory.pm:

          Changed to detect Subversion before CVS.

Wed May  7 14:12:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
